--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ body {
     box-sizing: border-box;
     inset: -10px;
     border-radius: 50%;
-    border: 10px solid rgb(28, 100, 242);
+    border: 10px solid var(--main-color);
     animation: prixClipFix 2s infinite linear;
 }
 
