--- a/src/index.css
+++ b/src/index.css
@@ -71,8 +71,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
   }
   
   .dot {
