edit menu button and cart

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,10 @@
 
 body {
     font-family: var(--font-family) !important;
+    background-image: url(../src/assets/images/light-patten.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center ;
 }
 
 .active {
